refactor and clean tests